<resources>
    <string name="app_name">Pegion</string>
    <string name="register_option_text">No Account? Register Here!</string>
    <string name="log_in_option_text">Log In</string>
    <string name="register_sample_text">Create a new account</string>
    <string name="hint_email">Enter email</string>
    <string name="hint_password">Enter password</string>
    <string name="hint_name">Enter your name</string>
    <string name="register_login_option_text">Already have an account? Login here</string>
    <string name="logIn_sample_text">Log in to your Account</string>
    <string name="email_required">Email required</string>
    <string name="password_length_constraint">Atleast 6 character required</string>
    <string name="password_not_matched">Password not matched</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_display_name">User Name</string>
    <string name="user_status_default_text">Hi there, I am using Pegion</string>
    <string name="change_photo">Change Image</string>
    <string name="change_status">Change Status</string>
    <string name="account_settings">Account Settings</string>
    <string name="chat_room">Chat Room</string>
    <string name="save">save</string>
    <string name="no_connection">No Internet Connection, please! check connection and try again</string>
    <string name="find_friends">Find Friends</string>
    <string name="user_name">User Name</string>
    <string name="friends">Friends</string>
    <string name="unfirend">Unfriend Now</string>
    <string name="decline">Decline</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="cancel_friend_request">Cancel Friend Request</string>
    <string name="accept_friend_request">Accept Friend Request</string>
    <string name="decline_friend_request">Decline Friend Request</string>
    <string name="request">request</string>
    <string name="channel_name">Friend Request</string>
    <string name="channel_description">Notifications of Friend Requests</string>

</resources>
